# python-osism

./: .flake8  .gitignore  .hadolint.yaml  .zuul.yaml  CHANGELOG.md  Containerfile  Giltfile.yaml  Makefile  Pipfile  README.md  manage.py  pyproject.toml  requirements.ansible.txt  requirements.netbox-manager.txt  requirements.openstack-flavor-manager.txt  requirements.openstack-image-manager.txt  requirements.sonic.txt  requirements.txt  requirements.yml  setup.cfg  setup.py
.github/: renovate.json
.github/workflows/: build-container-image.yml  check-docker-syntax.yml  publish.yml  test-netbox-integration.yml  test-python-setup.yml
contrib/: netbox-state-machine.dot  osism.drawio  python-osism.drawio
files/: change.sh  cleanup-ansible-collections.sh  clush.conf  main.py  redfishMockupCreate.py  run-ansible-console.sh  settings.py
files/clustershell/: clush.conf  groups.conf
files/connect/: main.py  settings.py
files/data/: cloudpod.yml  flavors.yaml
files/deploy/: main.py
files/disable/: main.py
files/generate/: main.py
files/import/: main.py  settings.py
files/netbox-manager/: settings.toml
files/patches/: migration-cycle-remove-cornerstoneclient.patch
files/sonic/: config_db.json
files/sonic/port_config/: Accton-AS4625-54T.ini  Accton-AS5835-54T.ini  Accton-AS7326-56X.ini  Accton-AS7726-32X.ini  Accton-AS9716-32D.ini
files/sonic/yang_models/: sonic-asic-sensors.yang  sonic-banner.yang  sonic-bgp-aggregate-address.yang  sonic-bgp-allowed-prefix.yang  sonic-bgp-device-global.yang  sonic-bgp-global.yang  sonic-bgp-prefix-list.yang  sonic-bmp.yang  sonic-buffer-pool.yang  sonic-buffer-profile.yang  sonic-buffer-queue.yang  sonic-chassis-module.yang  sonic-debug-counter.yang  sonic-device_metadata.yang  sonic-device_neighbor_metadata.yang  sonic-dhcp-server-ipv4.yang  sonic-dhcpv4-relay.yang  sonic-dns.yang  sonic-events-dhcp-relay.yang  sonic-events-host.yang  sonic-events-swss.yang  sonic-extension.yang  sonic-fabric-monitor.yang  sonic-fabric-port.yang  sonic-feature.yang  sonic-fine-grained-ecmp.yang  sonic-flex_counter.yang  sonic-gnmi.yang  sonic-grpcclient.yang  sonic-hash.yang  sonic-heartbeat.yang  sonic-high-frequency-telemetry.yang  sonic-interface.yang  sonic-kdump.yang  sonic-logger.yang  sonic-loopback-interface.yang  sonic-memory-statistics.yang  sonic-mirror-session.yang  sonic-mux-cable.yang  sonic-mux-linkmgr.yang  (+34 more)
frontend/: .dockerignore  Containerfile  docker-compose.yml  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: ConnectionStatus.tsx  CopyButton.tsx  EventsFilters.tsx  EventsList.tsx
frontend/app/events/: page.tsx
frontend/app/inventory/: page.tsx
frontend/app/nodes/: page.tsx
frontend/app/services/: page.tsx
frontend/lib/: api.ts  types.ts
frontend/lib/hooks/: useWebSocket.ts
osism/: __init__.py  __main__.py  ansible.py  api.py  apply.py  beat.py  deploy.py  flower.py  listener.py  main.py  netbox.py  reconciler.py  service.py  settings.py  status.py  watchdog.py  worker.py
osism/actions/: check_configuration.py  deploy_configuration.py  diff_configuration.py  generate_configuration.py  manage_device.py  manage_interface.py
osism/commands/: .manage.py.swp  __init__.py  amphora.py  apply.py  baremetal.py  bifrost.py  check.py  compose.py  compute.py  configuration.py  console.py  container.py  dump.py  get.py  loadbalancer.py  lock.py  log.py  manage.py  migrate.py  netbox.py  noset.py  octavia.py  openstack.py  reconciler.py  redfish.py  report.py  reset.py  revoke.py  server.py  service.py  set.py  sonic.py  status.py  stress.py  sync.py  task.py  validate.py  vault.py  versions.py  volume.py  (+2 more)
osism/core/: enums.py  playbooks.py
osism/data/: __init__.py  enums.py  playbooks.py
osism/plugins/: routeros.py  routeros_testing.py
osism/plugins/deployment/: routeros.py  routeros_testing.py
osism/services/: beat.py  event_bridge.py  listener.py  websocket_manager.py
osism/tasks/: __init__.py  ansible.py  ceph.py  conductor.py  ironic.py  kolla.py  kubernetes.py  netbox.py  openstack.py  osism.py  reconciler.py
osism/tasks/conductor/: __init__.py  config.py  ironic.py  netbox.py  redfish.py  sonic.py  utils.py
osism/utils/: __init__.py  gnmi.py  hosts.py  http.py  inventory.py  mariadb.py  netbox.py  rabbitmq.py  ssh.py
playbooks/: build.yml  pre-sonic-e2e.yml  pre.yml  test-integration.yml  test-setup.yml  test-sonic-e2e.yml  test-unit.yml
releasenotes/notes/: OSISM_APPLY_RETRY-997fffd5d3cd844e.yaml  apply-retry-5faa8a2d82d21d0a.yaml  command-set-noset-6c803c26c0ed5666.yaml  command-set-noset-boostrap-8ae8277a4ce31186.yaml  configuration-sync-command-eba1d53513154e54.yaml  custom-plays-timeout-9fd5f0452a11aae5.yaml  do-not-write-states-of-all-roles-0c68ba11a9d2f387.yaml  get-status-command-747d6885fd157a86.yaml  merge-stdout-and-stderr-49cc1ea54d16fa4b.yaml  netbox-ansible-output-cfd92b84505fbf5d.yaml  new-vault-password-commands-48db1885ef2519f1.yaml  number-of-workers-f55a3422c0b976cc.yaml  opensearch-protocol-c222c86a24ac594c.yaml  reconciler-logs-a1e260ae5d637709.yaml  reconciler-on-change-92c9127be6b4dfb1.yaml  redis-ping-41b24ebd67461cd9.yaml  redis-streams-2c1ece0ebfaed996.yaml  task-timeout-parameter-for-apply-command-3acc410ecafc3965.yaml  vault-view-command-09887cfd02679002.yaml  workaround-celery-kombu-gh1804-e0f1b3d38691d561.yaml
scripts/: build.sh  push.sh
tests/: conftest.py
tests/e2e/: compare.py  generate.py  run.sh
tests/e2e/golden/: osism_e2e-breakout-derived_config_db.json  osism_e2e-breakout-explicit_config_db.json  osism_testbed-switch-0_config_db.json  osism_testbed-switch-1_config_db.json  osism_testbed-switch-2_config_db.json  osism_testbed-switch-3_config_db.json  (+1 more)
tests/integration/: conftest.py  test_api_facts.py  test_api_websocket.py  test_celery.py  test_locking.py  test_redis_streams.py
tests/unit/: test_api_endpoints.py  test_api_helpers.py  test_main.py  test_settings.py  test_smoke.py
tests/unit/commands/: _helpers.py  (+40 more)
tools/: sonic_yang_to_pydantic.py
(+77 files in other folders)
