[tool.poetry]
name = "osism"
version = "0.1.0"
description = "OSISM manager interface"
authors = ["OSISM GmbH <info@osism.tech>"]
readme = "README.md"
homepage = "https://github.com/osism/python-osism"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
GitPython = "^3.1.32"
Jinja2 = "^3.1.2"
PyYAML = "^6.0.1"
ara = "^1.6.1"
celery = {version = "^5.3.1", extras = ["redis"]}
cliff = "^4.3.0"
deepdiff = "^6.3.1"
docker = "^6.1.3"
fastapi = "^0.100.0"
flower = "^2.0.0"
hiredis = "^2.2.3"
kombu = "^5.3.1"
loguru = "^0.7.0"
napalm = "^4.1.0"
netmiko = "^4.2.0"
openstacksdk = "^1.3.1"
pottery = "^3.0.0"
prompt-toolkit = "^3.0.39"
pydantic = "^1.10.11"
pynetbox = "^7.0.1"
sqlmodel = "^0.0.8"
sushy = "^4.5.0"
tabulate = "^0.9.0"
transitions = "^0.9.0"
uvicorn = {version = "^0.23.1", extras = ["standard"]}
watchdog = "^3.0.0"
