[metadata]
name = osism
summary = OSISM manager interface
description_file =
    README.md
long_description = file: README.md
long_description_content_type = text/markdown
author = OSISM GmbH
author_email = info@osism.tech
home_page = https://github.com/osism/python-osism
python_requires = >=3.8
classifier =
   Development Status :: 3 - Alpha
   Environment :: Console
   Intended Audience :: Developers
   Intended Audience :: Information Technology
   License :: OSI Approved :: Apache Software License
   Operating System :: OS Independent
   Programming Language :: Python
   Programming Language :: Python :: 3 :: Only
   Programming Language :: Python :: 3
   Programming Language :: Python :: 3.8
   Programming Language :: Python :: 3.9
   Programming Language :: Python :: 3.10
   Programming Language :: Python :: 3.11

[options]
include_package_data = True
install_requires = file: requirements.txt
packages =
    osism

[options.extras_require]
ansible = file: requirements.ansible.txt
openstack-image-manager = file: requirements.openstack-image-manager.txt

[options.entry_points]
console_scripts =
    osism = osism.main:main
osism.commands:
    apply = osism.commands.apply:Run
    bifrost = osism.commands.bifrost:Run
    bifrost deploy = osism.commands.bifrost:Deploy
    compose = osism.commands.compose:Run
    configuration sync = osism.commands.configuration:Sync
    console = osism.commands.console:Run
    container = osism.commands.container:Run
    docker = osism.commands.container:Run
    dump facts = osism.commands.get:Facts
    dump inventory = osism.commands.get:Hostvars
    get facts = osism.commands.get:Facts
    get hosts = osism.commands.get:Hosts
    get hostvars = osism.commands.get:Hostvars
    get logs ansible = osism.commands.log:Ansible
    get logs container = osism.commands.log:Container
    get logs file = osism.commands.log:File
    get logs opensearch = osism.commands.log:Opensearch
    get states = osism.commands.get:States
    get status = osism.commands.status:Run
    get tasks = osism.commands.get:Tasks
    get versions manager = osism.commands.get:VersionsManager
    log ansible = osism.commands.log:Ansible
    log container = osism.commands.log:Container
    log file = osism.commands.log:File
    log opensearch = osism.commands.log:Opensearch
    manage flavors = osism.commands.manage:Flavors
    manage images = osism.commands.manage:Images
    netbox = osism.commands.netbox:Run
    netbox check = osism.commands.netbox:Check
    netbox connect = osism.commands.netbox:Connect
    netbox deploy= osism.commands.netbox:Deploy
    netbox diff = osism.commands.netbox:Diff
    netbox disable = osism.commands.netbox:Disable
    netbox generate = osism.commands.netbox:Generate
    netbox import = osism.commands.netbox:Import
    netbox init = osism.commands.netbox:Init
    netbox manage = osism.commands.netbox:Manage
    netbox ping = osism.commands.netbox:Ping
    netbox sync = osism.commands.netbox:Sync
    netbox sync bifrost = osism.commands.netbox:Bifrost
    netbox sync ironic = osism.commands.netbox:Ironic
    noset bootstrap = osism.commands.noset:NoBootstrap
    noset maintenance = osism.commands.noset:NoMaintenance
    noset vault password = osism.commands.vault:UnsetPassword
    reconciler = osism.commands.reconciler:Run
    reconciler sync = osism.commands.reconciler:Sync
    service = osism.commands.service:Run
    set bootstrap = osism.commands.set:Bootstrap
    set maintenance = osism.commands.set:Maintenance
    set vault password = osism.commands.vault:SetPassword
    task list = osism.commands.get:Tasks
    task revoke = osism.commands.task:Revoke
    validate = osism.commands.validate:Run
    vault password set = osism.commands.vault:SetPassword
    vault password unset = osism.commands.vault:UnsetPassword
    wait = osism.commands.wait:Run
    worker = osism.commands.worker:Run
