[metadata]
name = osism
summary = OSISM manager interface
description_file =
    README.md
long_description = file: README.md
long_description_content_type = text/markdown
author = OSISM GmbH
author_email = info@osism.tech
home_page = https://github.com/osism/python-osism
python_requires = >=3.8
classifier =
   Development Status :: 5 - Production/Stable
   Environment :: Console
   Intended Audience :: Developers
   Intended Audience :: Information Technology
   License :: OSI Approved :: Apache Software License
   Operating System :: OS Independent
   Programming Language :: Python
   Programming Language :: Python :: 3 :: Only
   Programming Language :: Python :: 3
   Programming Language :: Python :: 3.8
   Programming Language :: Python :: 3.9
   Programming Language :: Python :: 3.10
   Programming Language :: Python :: 3.11

[options]
include_package_data = True
install_requires = file: requirements.txt
packages =
    osism

[options.extras_require]
ansible = file: requirements.ansible.txt
openstack-image-manager = file: requirements.openstack-image-manager.txt

[options.entry_points]
console_scripts =
    osism = osism.main:main
osism.commands:
    apply = osism.commands.apply:Run
    baremetal burnin = osism.commands.baremetal:BaremetalBurnIn
    baremetal clean = osism.commands.baremetal:BaremetalClean
    baremetal delete = osism.commands.baremetal:BaremetalDelete
    baremetal deploy = osism.commands.baremetal:BaremetalDeploy
    baremetal dump = osism.commands.baremetal:BaremetalDump
    baremetal list = osism.commands.baremetal:BaremetalList
    baremetal maintenance set = osism.commands.baremetal:BaremetalMaintenanceSet
    baremetal maintenance unset = osism.commands.baremetal:BaremetalMaintenanceUnset
    baremetal ping = osism.commands.baremetal:BaremetalPing
    baremetal power off = osism.commands.baremetal:BaremetalPowerOff
    baremetal power on = osism.commands.baremetal:BaremetalPowerOn
    baremetal provide = osism.commands.baremetal:BaremetalProvide
    baremetal undeploy = osism.commands.baremetal:BaremetalUndeploy
    compose = osism.commands.compose:Run
    configuration sync = osism.commands.configuration:Sync
    console = osism.commands.console:Run
    container = osism.commands.container:Run
    docker = osism.commands.container:Run
    dump facts = osism.commands.get:Facts
    dump inventory = osism.commands.get:Hostvars
    get facts = osism.commands.get:Facts
    get hosts = osism.commands.get:Hosts
    get hostvars = osism.commands.get:Hostvars
    get logs ansible = osism.commands.log:Ansible
    get logs container = osism.commands.log:Container
    get logs file = osism.commands.log:File
    get logs opensearch = osism.commands.log:Opensearch
    get states = osism.commands.get:States
    get status = osism.commands.status:Run
    get tasks = osism.commands.get:Tasks
    get versions manager = osism.commands.get:VersionsManager
    log ansible = osism.commands.log:Ansible
    log container = osism.commands.log:Container
    log file = osism.commands.log:File
    log opensearch = osism.commands.log:Opensearch
    manage flavors = osism.commands.manage:Flavors
    manage project create = osism.commands.manage:ProjectCreate
    manage project sync = osism.commands.manage:ProjectSync
    manage image clusterapi = osism.commands.manage:ImageClusterapi
    manage image clusterapi gardener = osism.commands.manage:ImageClusterapiGardener
    manage image gardenlinux = osism.commands.manage:ImageGardenlinux
    manage image octavia = osism.commands.manage:ImageOctavia
    manage compute disable = osism.commands.compute:ComputeDisable
    manage compute enable = osism.commands.compute:ComputeEnable
    manage compute evacuate = osism.commands.compute:ComputeEvacuate
    manage compute list = osism.commands.compute:ComputeList
    manage compute migrate = osism.commands.compute:ComputeMigrate
    manage compute migration list = osism.commands.compute:ComputeMigrationList
    manage compute start = osism.commands.compute:ComputeStart
    manage compute stop = osism.commands.compute:ComputeStop
    manage images = osism.commands.manage:Images
    manage dnsmasq = osism.commands.manage:Dnsmasq
    manage netbox = osism.commands.netbox:Manage
    manage redfish list = osism.commands.redfish:List
    manage server list = osism.commands.server:ServerList
    manage server clean = osism.commands.server:ServerClean
    openstack stress = osism.commands.stress:OpenStackStress
    manage server migrate = osism.commands.server:ServerMigrate
    manage loadbalancer list = osism.commands.loadbalancer:LoadbalancerList
    manage loadbalancer reset = osism.commands.loadbalancer:LoadbalancerReset
    manage loadbalancer delete = osism.commands.loadbalancer:LoadbalancerDelete
    manage volume list = osism.commands.volume:VolumeList
    manage volume repair = osism.commands.volume:VolumeRepair
    manage amphora restore = osism.commands.amphora:AmphoraRestore
    manage amphora rotate = osism.commands.amphora:AmphoraRotate
    manage baremetal burnin = osism.commands.baremetal:BaremetalBurnIn
    manage baremetal clean = osism.commands.baremetal:BaremetalClean
    manage baremetal delete = osism.commands.baremetal:BaremetalDelete
    manage baremetal deploy = osism.commands.baremetal:BaremetalDeploy
    manage baremetal dump = osism.commands.baremetal:BaremetalDump
    manage baremetal list = osism.commands.baremetal:BaremetalList
    manage baremetal maintenance set = osism.commands.baremetal:BaremetalMaintenanceSet
    manage baremetal maintenance unset = osism.commands.baremetal:BaremetalMaintenanceUnset
    manage baremetal ping = osism.commands.baremetal:BaremetalPing
    manage baremetal power off = osism.commands.baremetal:BaremetalPowerOff
    manage baremetal power on = osism.commands.baremetal:BaremetalPowerOn
    manage baremetal provide = osism.commands.baremetal:BaremetalProvide
    manage baremetal undeploy = osism.commands.baremetal:BaremetalUndeploy
    netbox = osism.commands.netbox:Console
    netbox dump = osism.commands.netbox:Dump
    get versions netbox = osism.commands.netbox:Versions
    noset bootstrap = osism.commands.noset:NoBootstrap
    noset maintenance = osism.commands.noset:NoMaintenance
    noset vault password = osism.commands.vault:UnsetPassword
    reconciler = osism.commands.reconciler:Run
    reconciler sync = osism.commands.reconciler:Sync
    service = osism.commands.service:Run
    set bootstrap = osism.commands.set:Bootstrap
    set maintenance = osism.commands.set:Maintenance
    set vault password = osism.commands.vault:SetPassword
    sonic backup = osism.commands.sonic:Backup
    sonic console = osism.commands.sonic:Console
    sonic dump = osism.commands.sonic:Dump
    sonic list = osism.commands.sonic:List
    sonic load = osism.commands.sonic:Load
    sonic reboot = osism.commands.sonic:Reboot
    sonic reload = osism.commands.sonic:Reload
    sonic reset = osism.commands.sonic:Reset
    sonic show = osism.commands.sonic:Show
    sonic sync= osism.commands.sync:Sonic
    sonic ztp = osism.commands.sonic:Ztp
    sync ceph-keys = osism.commands.sync:CephKeys
    sync configuration = osism.commands.configuration:Sync
    sync dnsmasq = osism.commands.manage:Dnsmasq
    sync facts = osism.commands.sync:Facts
    sync inventory = osism.commands.reconciler:Sync
    sync ironic = osism.commands.netbox:Ironic
    sync netbox = osism.commands.netbox:Sync
    sync sonic = osism.commands.sync:Sonic
    sync versions = osism.commands.sync:Versions
    task list = osism.commands.get:Tasks
    task revoke = osism.commands.task:Revoke
    lock = osism.commands.lock:Lock
    unlock = osism.commands.lock:Unlock
    lock status = osism.commands.lock:LockStatus
    migrate rabbitmq3to4 = osism.commands.migrate:Rabbitmq3to4
    status database = osism.commands.status:Database
    status messaging = osism.commands.status:Messaging
    validate = osism.commands.validate:Run
    vault decrypt = osism.commands.vault:Decrypt
    vault password set = osism.commands.vault:SetPassword
    vault password unset = osism.commands.vault:UnsetPassword
    vault view = osism.commands.vault:View
    wait = osism.commands.wait:Run
    worker = osism.commands.worker:Run
